<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  app:motionDebug="SHOW_PATH"
  app:layoutDescription="@xml/activity_main_scene"
  tools:context=".MainActivity">

  <ImageView
    android:id="@+id/trooper"
    android:layout_width="@dimen/trooper_size"
    android:layout_height="@dimen/trooper_size"
    android:contentDescription="@string/trooper"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/trooper" />

  <ImageView
    android:id="@+id/laserFire"
    android:layout_width="@dimen/laser_width"
    android:layout_height="@dimen/laser_height"
    android:contentDescription="@string/laser_fire"
    android:scaleType="fitCenter"
    app:srcCompat="@drawable/laserfire" />

  <TextView
    android:id="@+id/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0.0"
    android:text="@string/yoda_message"
    android:textColor="@color/colorPrimary"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/lightSaber"
    android:layout_width="@dimen/saber_width"
    android:layout_height="@dimen/saber_height"
    android:contentDescription="@string/light_saber"
    android:scaleType="fitCenter"
    app:srcCompat="@drawable/lightsaber" />

  <ImageView
    android:id="@+id/yoda"
    android:layout_width="@dimen/yoda_width"
    android:layout_height="@dimen/yoda_height"
    android:contentDescription="@string/yoda"
    android:scaleType="fitCenter"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/yoda" />

</androidx.constraintlayout.motion.widget.MotionLayout>